[package]
name = "docker-proxy-filter"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
futures-util = "0.3.31"
http = "1.3.1"
log = {version = "0.4.28", features = ["kv","kv_std"] }
ntex = { version = "2.16.0", features = ["tokio"] }
regex = "1.11.3"
reqwest = {version = "0.12.23", features = ["json"] }
serde = {version ="1.0.228", features = ["derive"] }
serde_json = "1.0.145"
slog = "2.8.0"
slog-async = "2.8.0"
slog-envlogger = "2.2.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
slog-term = "2.9.2"
url = "2.5.7"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1