[package]
name = "docker-proxy-filter"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
envy = "0.4.2"
futures-util = "0.3.31"
http = "1.3.1"
ntex = { version = "2.16.0", features = ["tokio"] }
regex = "1.11.3"
reqwest = {version = "0.12.23", features = ["json"] }
serde = {version ="1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
